fix path encoding bug in WebDAV client
Former-commit-id: 2d11fd6cb3a181dba61ed1a7a2d01f7467703acd